<resources>
    <string name="app_name" translatable="false">DTAListy</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_username_empty">Username can not be empty.</string>
    <string name="error_password_empty">Password can not be empty.</string>
    <string name="error_password_mismatch">Passwords do not match.</string>
    <string name="hint_confirm_password">Confirm Password</string>
</resources>
